fixed text overflow on release cards

--- a/src/styles.css
+++ b/src/styles.css
@@ -467,7 +467,11 @@ input[type="password"] {
 }
 
 .release-card>p {
+	margin: 0 1rem 0 1rem;
 	text-align: center;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .release-card>p:first-of-type {
